[Scribe] Add Scribe tests using the kotlin-compile-testing library