@@ -1,7 +1,40 @@
+import org.gradle.kotlin.dsl.named
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     `liblib-module-testmod`
 }
 
 dependencies {
     ksp(project(":scribe:processor"))
+
+    // fork that supports kotlin 2.0.21 - https://github.com/tschuchortdev/kotlin-compile-testing/issues/411
+    testImplementation(project(":scribe:processor"))
+    testImplementation("dev.zacsweers.kctfork:ksp:0.6.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${project.property("junit_version")}")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${project.property("junit_version")}")
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
+
+    // https://github.com/ZacSweers/kotlin-compile-testing/?tab=readme-ov-file#java-16-compatibility
+    jvmArgs(
+        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    )
+}
+
+tasks.named<KotlinCompile>("compileTestKotlin") {
+    compilerOptions {
+        optIn.add("org.jetbrains.kotlin.compiler.plugin.ExperimentalCompilerApi")
+    }
 }
